--- a/styles/flower.css
+++ b/styles/flower.css
@@ -19,8 +19,34 @@ body {
   }
 }
 
-/* banner related styles */
+.btn-primary {
+  border-radius: 8px;
+  background: #E55473;
+  padding: 20px 40px;
+  color: #FFF;
+  font-size: 20px;
+  font-weight: 700;
+}
 
+.section-title {
+  color: #272727;
+  text-align: center;
+  font-family: Lato;
+  font-size: 40px;
+  font-weight: 800;
+}
+
+.text-primary {
+  color: rgba(39, 39, 39, 0.60);
+  text-align: center;
+  font-family: Lato;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 30px;
+  /* 166.667% */
+}
+
+/* banner related styles */
 .banner {
   background: rgba(229, 84, 115, 0.10);
   padding: 0 240px;
@@ -54,19 +80,83 @@ body {
   /* 166.667% */
 }
 
-.btn-primary {
-  border-radius: 8px;
-  background: #E55473;
-  padding: 20px 40px;
-  color: #FFF;
-  font-family: Lato;
-  font-size: 20px;
-  font-weight: 700;
-}
-
 .banner img {
   padding: 50px 0 0 0;
   /* width: 635px; */
   /* height: 800px; */
   flex-shrink: 0;
+}
+
+/* featured flower related styles */
+/*  */
+.featured-flowers {
+  padding: 50px 240px 50px 280px;
+}
+.featured-flowers h3 {
+  margin: 0;
+  /* padding: 150px 0 0 750px; */
+}
+
+.featured-flowers p {
+  padding: 20px 420px 0px 420px;
+  width: 600px;
+  margin: 0;
+}
+
+
+
+
+.fea-flower {
+  display: flex;
+  padding: 0px 240px 50px 280px;
+  gap: 25px;
+}
+
+.flower-background-1,
+.flower-background-2,
+.flower-background-3 {
+  width: 464px;
+  height: 538px;
+  border-radius: 300px 300px 0px 0px;
+  /* position: absolute; */
+  /* position: relative; */
+}
+
+.flower-background-1 {
+  background: rgba(167, 33, 98, 0.15);
+}
+
+.flower-background-2 {
+  background: rgba(5, 151, 160, 0.15);
+}
+
+.flower-background-3 {
+  background: rgba(71, 125, 17, 0.15);
+}
+
+.flower img {
+  margin: 0;
+  padding: 110px 78px 0 76px;
+}
+
+.flower-background-3 img {
+  padding: 67px 75px 0 75px;
+}
+
+.flower p {
+  display: block;
+  padding-top: 32px;
+  margin: 0;
+  text-align: center;
+  color: #272727;
+  font-family: Lato;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 35px;
+  /* 145.833% */
+  text-decoration-line: underline;
+}
+
+.flower-background-2 p {
+  padding-top: 90px;
 }
